# MLOps-Fraud-Detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: generate_creditcard_data.py  run_pipeline.py
src/api/: main.py
src/data/: ingestion.py  validation.py
src/features/: engineering.py
src/models/: registry.py  train.py
src/monitoring/: drift.py
tests/unit/: test_features.py  test_validation.py
